Added second way to program problem 3. It seems to work correctly.

--- a/cis25Spring2015SampleMidtermProblem3/cis25Spring2015SampleMidtermProblem3.vcxproj.filters
+++ b/cis25Spring2015SampleMidtermProblem3/cis25Spring2015SampleMidtermProblem3.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="cis25Spring2015SampleMidtermProblem3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Trail1cpp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
