--- a/cis25Spring2015SampleMidtermProblem3/cis25Spring2015SampleMidtermProblem3.vcxproj
+++ b/cis25Spring2015SampleMidtermProblem3/cis25Spring2015SampleMidtermProblem3.vcxproj
@@ -78,7 +78,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cis25Spring2015SampleMidtermProblem3.cpp" />
+    <ClCompile Include="cis25Spring2015SampleMidtermProblem3.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Trail1cpp.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
