--- a/cis25Spring2015SampleMidtermProblem4/cis25Spring2015SampleMidtermProblem4.vcxproj.filters
+++ b/cis25Spring2015SampleMidtermProblem4/cis25Spring2015SampleMidtermProblem4.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="cis25Spring2015SampleMidtermProblem4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Trial1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
