--- a/cis25Spring2015SampleMidtermProblem3/cis25Spring2015SampleMidtermProblem3.vcxproj
+++ b/cis25Spring2015SampleMidtermProblem3/cis25Spring2015SampleMidtermProblem3.vcxproj
@@ -81,7 +81,7 @@
     <ClCompile Include="cis25Spring2015SampleMidtermProblem3.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="Trail1cpp.cpp" />
+    <ClCompile Include="Trail1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
