--- a/cis25Spring2015SampleMidtermProblem1/cis25Spring2015SampleMidtermProblem1.vcxproj
+++ b/cis25Spring2015SampleMidtermProblem1/cis25Spring2015SampleMidtermProblem1.vcxproj
@@ -78,7 +78,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cis25Spring2015SampleMidtermProblem1.cpp" />
+    <ClCompile Include="cis25Spring2015SampleMidtermProblem1.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Trial1.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
