Laid down the structure of the program. Nullptr check does not seem to work as nullptr does not get update after the object is created.

--- a/cis25Spring2015RussellJewLab4Ex1/cis25Spring2015RussellJewLab4Ex1.vcxproj
+++ b/cis25Spring2015RussellJewLab4Ex1/cis25Spring2015RussellJewLab4Ex1.vcxproj
@@ -78,7 +78,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cis25Spring2015RussellJewFractionRussellJ.cpp" />
     <ClCompile Include="cis25Spring2015RussellJewLab4Ex1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cis25Spring2015RussellJewFractionRussellJ.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
