--- a/cis25Spring2015RussellJewLab6Ex1/cis25Spring2015RussellJewLab6Ex1.vcxproj
+++ b/cis25Spring2015RussellJewLab6Ex1/cis25Spring2015RussellJewLab6Ex1.vcxproj
@@ -78,13 +78,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cis25Spring2015CircleRussellJ.cpp" />
     <ClCompile Include="cis25Spring2015FractionRussellJ.cpp" />
+    <ClCompile Include="cis25Spring2015PointRussellJ.cpp" />
+    <ClCompile Include="cis25Spring2015RectangleRussellJ.cpp" />
     <ClCompile Include="cis25Spring2015RussellJewLab6Ex1.cpp" />
     <ClCompile Include="cis25Spring2015RussellJewLab6Ex1Driver.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cis25Spring2015CircleRussellJ.h" />
     <ClInclude Include="cis25Spring2015FractionRussellJ.h" />
-    <ClInclude Include="cis25Spring2015FractionRussellJUtility.h" />
+    <ClInclude Include="cis25Spring2015PointRussellJ.h" />
+    <ClInclude Include="cis25Spring2015RectangleRussellJ.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
