--- a/cis25Spring2015RussellJewLab6Ex1/cis25Spring2015RussellJewLab6Ex1.vcxproj.filters
+++ b/cis25Spring2015RussellJewLab6Ex1/cis25Spring2015RussellJewLab6Ex1.vcxproj.filters
@@ -24,12 +24,27 @@
     <ClCompile Include="cis25Spring2015RussellJewLab6Ex1Driver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cis25Spring2015CircleRussellJ.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cis25Spring2015RectangleRussellJ.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cis25Spring2015PointRussellJ.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cis25Spring2015FractionRussellJ.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="cis25Spring2015FractionRussellJUtility.h">
+    <ClInclude Include="cis25Spring2015PointRussellJ.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cis25Spring2015RectangleRussellJ.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cis25Spring2015CircleRussellJ.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
