--- a/cis25Spring2015RussellJewLab6Ex1/cis25Spring2015RussellJewLab6Ex1.vcxproj
+++ b/cis25Spring2015RussellJewLab6Ex1/cis25Spring2015RussellJewLab6Ex1.vcxproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <ClCompile Include="cis25Spring2015CircleRussellJ.cpp" />
     <ClCompile Include="cis25Spring2015FractionRussellJ.cpp" />
+    <ClCompile Include="cis25Spring2015FractionRussellJUtility.cpp" />
     <ClCompile Include="cis25Spring2015PointRussellJ.cpp" />
     <ClCompile Include="cis25Spring2015RectangleRussellJ.cpp" />
     <ClCompile Include="cis25Spring2015RussellJewLab6Ex1.cpp" />
@@ -88,6 +89,7 @@
   <ItemGroup>
     <ClInclude Include="cis25Spring2015CircleRussellJ.h" />
     <ClInclude Include="cis25Spring2015FractionRussellJ.h" />
+    <ClInclude Include="cis25Spring2015FractionRussellJUtility.h" />
     <ClInclude Include="cis25Spring2015PointRussellJ.h" />
     <ClInclude Include="cis25Spring2015RectangleRussellJ.h" />
   </ItemGroup>
