--- a/cis25Spring2015RussellJewLab6Ex1/cis25Spring2015RussellJewLab6Ex1.vcxproj.filters
+++ b/cis25Spring2015RussellJewLab6Ex1/cis25Spring2015RussellJewLab6Ex1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="cis25Spring2015PointRussellJ.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cis25Spring2015FractionRussellJUtility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cis25Spring2015FractionRussellJ.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="cis25Spring2015CircleRussellJ.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cis25Spring2015FractionRussellJUtility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
